messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app
  namespace: messaging-app
  labels: django

spec:
  replicas: 1
  selector:
    matchLabels: 
      app: django
  template:
    metadata:
      labels: 
        app: django
    spec:
      containers:
        - name: django
          image: messaging_app-web:latest
          ports:
            - containerPort: 8000
