messaging_app/messaging_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  namespace: messaging-app1
spec:
  selector:
    app: django
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081        
      targetPort: 8081
