messaging_app/messaging_app/django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-ingress
  namespace: messaging-app1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: messaging-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: messaging-app-service   # <- correct service name
                port:
                  number: 8081
